:sparkles: feat: 팀 조회 구현